--- a/dev/assets/_modules/menu.pug
+++ b/dev/assets/_modules/menu.pug
@@ -1,5 +1,6 @@
 #menu.snj-container
 	.row
+		.header-nav
 		.menu-wrapper.offset-3.snj-col-7
 			a.menu-item.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1" href="about.html")
 				h2.item-title About Us
