--- a/dev/assets/_modules/header.pug
+++ b/dev/assets/_modules/header.pug
@@ -3,7 +3,7 @@ header.snj-container-fluid
 		#header-wrapper.snj-col-12
 			a.logo-wrapper.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1" href="index.html")
 				+logo-jb
-
+			//- include ../_modules/menu.pug
 			include ../_modules/nav.pug
 
 			a.link-pages.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1" href="about.html")
