--- a/dev/scss/modules/_nav.scss
+++ b/dev/scss/modules/_nav.scss
@@ -1,22 +1,43 @@
-nav.nav-wrapper{
+nav.nav-menu{
 	width: 20px;
 	// padding: 3px 0;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: flex-end;
-	[class^="menu-line-"]{		
-		background-color: $cream;
-		height: 2px;
-		display: inline-block;
-	}
-	.menu-line-1{
+	cursor: pointer;
+	button.burger-wrapper{
 		width: 100%;
-		margin-bottom: 2px;
-	}
-	.menu-line-2{
-		width: 50%;
-		margin-top: 2px;
+		height: 100%;
+		position: relative;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: flex-end;
+		[class^="menu-line-"]{		
+			background-color: $cream;
+			height: 2px;
+			display: inline-block;
+		}
+		.menu-line-1{
+			width: 100%;
+			margin-bottom: 2px;
+		}
+		.menu-line-2{
+			width: 50%;
+			margin-top: 2px;
+		}
+		&.active{
+			[class*="close-line-"]{
+				position: absolute;
+				transform-origin:center;
+				top: 50%;
+				transform:translate3d(0 -50% 0);
+				margin: 0;
+			}
+			.close-line-1{
+				transform: rotate(45deg);
+			}
+			.close-line-2{
+				transform: rotate(-45deg);
+			}
+		}
 	}
 	@media(max-width: 768px){
 		margin-right: 15px;
