About Slides: funcionalidad con js agregada, three.js comentado.

--- a/dev/assets/_modules/about-slider-points.pug
+++ b/dev/assets/_modules/about-slider-points.pug
@@ -1,5 +1,5 @@
 nav.slider-wrapper
-	ul.slider-list
-		li.dot-slider.active-dot.jb-cascade(data-cascade="fade-up")
-		li.dot-slider.jb-cascade(data-cascade="fade-up")
-		li.dot-slider.jb-cascade(data-cascade="fade-up")
+	ul#about-slider-dots.slider-list
+		li.dot-slider.active.jb-cascade(data-cascade="fade-up" data-p-index=0)
+		li.dot-slider.jb-cascade(data-cascade="fade-up" data-p-index=1)
+		li.dot-slider.jb-cascade(data-cascade="fade-up" data-p-index=2)
