--- a/dev/assets/_modules/slide-about.pug
+++ b/dev/assets/_modules/slide-about.pug
@@ -10,11 +10,12 @@
 		.separator-line
 			.line.jb-cascade(data-cascade="line-full" data-cascade-delay-mobile="1" data-cascade-delay="1")
 
-		p.paragraph-1.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="2" data-cascade-delay="2") Jungle Beige was founded in 2016 by Khalid Bin Hadher, Michael Taylor, Florian Moser and B.J. De Guzman. The passion and perseverance required to build culturally relevant brands and communications is in the DNA of our agency, because it’s in the DNA of our founders.
+		#paragraphs-wrap.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="2" data-cascade-delay="2")
+			p.about-p.show Jungle Beige was founded in 2016 by Khalid Bin Hadher, Michael Taylor, Florian Moser and B.J. De Guzman. The passion and perseverance required to build culturally relevant brands and communications is in the DNA of our agency, because it’s in the DNA of our founders.
 
-		p.paragraph-2.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="2" data-cascade-delay="2") Khalid has developed numerous brands from scratch, including Bikers Cafe, Airwerks and Myocum. Michael and Florian, along with Khalid, have built Amongst Few, Amongst Few Cafe and Unison Barbershop. B.J. De Guzman is a co-founder of High Beams Dubai.
+			p.about-p Khalid has developed numerous brands from scratch, including Bikers Cafe, Airwerks and Myocum. Michael and Florian, along with Khalid, have built Amongst Few, Amongst Few Cafe and Unison Barbershop. B.J. De Guzman is a co-founder of High Beams Dubai.
 
-		p.paragraph-3.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="2" data-cascade-delay="2") This unique background of being founded and led by actual brand creators gives us a complete understanding of what our clients experience and continually strive to achieve. It also means that we have the same intensity for producing work that is authentic to the brand, and revered by its customers. 
+			p.about-p This unique background of being founded and led by actual brand creators gives us a complete understanding of what our clients experience and continually strive to achieve. It also means that we have the same intensity for producing work that is authentic to the brand, and revered by its customers. 
 
 		.social-wrapper
 			a.social-link.jb-cascade(data-cascade="fade-up" href="https://www.linkedin.com/company/jungle-beige")
