--- a/dev/assets/_modules/header.pug
+++ b/dev/assets/_modules/header.pug
@@ -1,10 +1,9 @@
-header.snj-container-fluid
-	.row
-		#header-wrapper.snj-col-12
-			a.logo-wrapper.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1" href="index.html")
-				+logo-jb
-			//- include ../_modules/menu.pug
-			include ../_modules/nav.pug
+header#header-nav.snj-container-fluid
+	.header-wrapper
+		a.logo-wrapper.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1" href="index.html")
+			+logo-jb
+		include ../_modules/menu.pug
+		include ../_modules/nav.pug
 
-			a.link-pages.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1" href="about.html")
-				span.line-link About us
+		a.link-pages.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1" href="about.html")
+			span.line-link About us
