--- a/dev/assets/_modules/nav.pug
+++ b/dev/assets/_modules/nav.pug
@@ -1,7 +1,7 @@
-nav.nav-menu.snj-header-nav.snj-header-nav__trigger
-	button.burger-wrapper
-		span.menu-line-1.jb-cascade(data-cascade="line-full" data-cascade-delay-mobile="2" data-cascade-delay="2")
-		span.menu-line-2.jb-cascade(data-cascade="line-half" data-cascade-delay-mobile="3" data-cascade-delay="3")
+nav.nav-menu
+	button#sidenav-show-trigger.nav-wrapper
+		span.menu-line.burger-line-1.jb-cascade(data-cascade="line-full" data-cascade-delay-mobile="2" data-cascade-delay="2")
+		span.menu-line.burger-line-2.jb-cascade(data-cascade="line-half" data-cascade-delay-mobile="3" data-cascade-delay="3")
 
-		span.menu-line-1.close-line-1
-		span.menu-line-1.close-line-2
+		span.menu-line.close-line-1
+		span.menu-line.close-line-2
