--- a/dev/scss/modules/_header.scss
+++ b/dev/scss/modules/_header.scss
@@ -1,4 +1,4 @@
-header{
+header#header-nav{
 	position: relative;
 	z-index: 1000;
 	position: fixed;
@@ -6,12 +6,12 @@ header{
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	pointer-events: none;
+	// pointer-events: none;
 	@media(min-width: 1282px){
 		height: getvw(40vw);
 	}
 }
-#header-wrapper{
+.header-wrapper{
 	width: 100%;
 	height: auto;
 	display: flex;
