--- a/dev/scss/modules/_menu.scss
+++ b/dev/scss/modules/_menu.scss
@@ -1,8 +1,16 @@
-#menu{
+#side-nav{
 	background-color: $orange;
 	width: 100%;
-	height: 100%;
+	height: 100vh;
+	display: block;
 	padding-top: 104px;
+	position: absolute;
+	top: 0;
+	right: 0;	
+	transform: translate(0, 100%);
+	@include transitions-ease(.9s);
+	opacity: 0;
+
 	.menu-wrapper{
 		padding-top: 40px;
 		position: relative;
@@ -66,6 +74,19 @@
 					}
 				}
 			}
+		}
+	}
+	&.active{
+		transform: translate(0, 0);
+		opacity: 1;
+	}
+	.sidenav-elems{
+		@include translate(0, 40px);
+		@include trans-ease-delay(.4s, .5s);
+		opacity: 0;
+		&.show{
+			@include translate(0,0);
+			opacity: 1;
 		}
 	}
 }
