--- a/dev/scss/modules/_nav.scss
+++ b/dev/scss/modules/_nav.scss
@@ -1,46 +1,58 @@
 nav.nav-menu{
 	width: 20px;
 	// padding: 3px 0;
+	margin-right: 15px;
 	cursor: pointer;
-	button.burger-wrapper{
+	.nav-wrapper{
 		width: 100%;
 		height: 100%;
 		position: relative;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: flex-end;
-		[class^="menu-line-"]{		
+		border: none;
+		background-color: transparent;
+		.menu-line{		
 			background-color: $cream;
 			height: 2px;
 			display: inline-block;
+			position: absolute;
+			@include transitions-ease(.3s)
 		}
-		.menu-line-1{
+		.burger-line-1{
 			width: 100%;
-			margin-bottom: 2px;
+			right: 0;
+			top: 3px;
 		}
-		.menu-line-2{
+		.burger-line-2{
 			width: 50%;
-			margin-top: 2px;
+			right: 0;
+			bottom: 3px;
 		}
-		&.active{
+		[class*="close-line-"]{
+			transform-origin:center;
+			width: 0;
+			top: 50%;
+			left: 50%;
+			opacity: 0;
+			pointer-events: none;
+			// @include transitions-ease(.5s)
+			@include trans-ease-delay(.4s, .3s);
+		}
+		.close-line-1{
+			transform: translate(-50%, -50%) rotate(45deg);
+		}
+		.close-line-2{
+			transform: translate(-50%, -50%) rotate(-45deg);
+		}
+		&.show{
+			[class*="burger-line"]{
+				opacity: 0;
+				animation-name: none;
+			}
 			[class*="close-line-"]{
-				position: absolute;
-				transform-origin:center;
-				top: 50%;
-				transform:translate3d(0 -50% 0);
-				margin: 0;
-			}
-			.close-line-1{
-				transform: rotate(45deg);
-			}
-			.close-line-2{
-				transform: rotate(-45deg);
+				opacity: 1;
+				width: 100%;
+				// animation-delay: 3s;
 			}
 		}
-	}
-	@media(max-width: 768px){
-		margin-right: 15px;
 	}
 	@media (min-width: 768px) {
 		display: none;
