message, flecha hover

--- a/dev/assets/_modules/header-nav.pug
+++ b/dev/assets/_modules/header-nav.pug
@@ -2,8 +2,8 @@ header#header-nav.snj-container-fluid
 	.header-wrapper
 		a.logo-wrapper.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1" href="index.html")
 			+logo-jb
-		include ../_modules/menu.pug
-		include ../_modules/nav.pug
+		include ../_modules/side-nav.pug
+		include ../_modules/nav-menu.pug
 
 		a.link-pages.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1" href="about.html")
 			span.line-link About us
