--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -25,8 +25,8 @@ html(class='no-js')
 	body
 		//- include ../_modules/preloader.pug
 		include ../_modules/icons.pug
-		include ../_modules/header.pug
-		include ../_modules/footer.pug
+		include ../_modules/header-nav.pug
+		include ../_modules/footer-nav.pug
 		include ../_modules/project-mixin.pug
 		include ../_modules/about-mixin.pug
 		include ../_modules/project-sections.pug
@@ -34,7 +34,7 @@ html(class='no-js')
 		include ../_modules/project-box-mixin.pug
 
 		//- include ../_modules/grid-lines.pug
-		include ../_modules/grid-lines-full.pug
+		//- include ../_modules/grid-lines-full.pug
 
 		//- include ../_modules/intro.pug
 		
