--- a/dev/assets/project-event-amongst.pug
+++ b/dev/assets/project-event-amongst.pug
@@ -42,7 +42,7 @@ block content
 					span Play
 			//- footer
 			section.footer-project
-				.snj-col-md-1.offset-md-2.arrow-container
+				.snj-col-md-1.offset-md-2.arrow-container.container-prev
 					a.more-cases.prev-case(href="project-event-puma.html")
 						span.light-font.left-translate Previous Case
 						.arrow-wrapper.left-translate
@@ -53,13 +53,13 @@ block content
 					h3 Amongst Few
 					h4 E-commerce
 					a(href="project-commerce-amongst.html") See case
-				.snj-col-md-1.offset-md-1.arrow-container
+					p.copyright © Copyright 2019
+				.snj-col-md-1.offset-md-1.arrow-container.container-next
 					a.more-cases.next-case(href="project-commerce-amongst.html")
 						span.light-font.right-translate Next Case
 						.arrow-wrapper.right-translate
 							.rectangle-arrow
 							+icon-arrow
-				p.copyright © Copyright 2019
 	a.navigation-btn.btn-pages(href="workevent.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
