--- a/dev/assets/project-brand-beams.pug
+++ b/dev/assets/project-brand-beams.pug
@@ -61,8 +61,8 @@ block content
 							.rectangle-arrow
 							+icon-arrow
 				//- p.copyright © Copyright 2019
-
 	a.navigation-btn.btn-pages(href="workbranding.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
+block footer
 	+footer("scroll")
