--- a/dev/assets/project-brand-cred.pug
+++ b/dev/assets/project-brand-cred.pug
@@ -43,7 +43,7 @@ block content
 					span Play
 			//- footer
 			section.footer-project
-				.snj-col-md-1.offset-md-2.arrow-container
+				.snj-col-md-1.offset-md-2.arrow-container.container-prev
 					a.more-cases.prev-case(href="project-brand-beams.html")
 						span.light-font.left-translate Previous Case
 						.arrow-wrapper.left-translate
@@ -54,13 +54,13 @@ block content
 					h3 Suede Guerrilla
 					h4 Campaign & Social Media Strategy
 					a(href="project-social-suede.html") See case
-				.snj-col-md-1.offset-md-1.arrow-container
+					p.copyright © Copyright 2019
+				.snj-col-md-1.offset-md-1.arrow-container.container-next
 					a.more-cases.next-case(href="project-social-suede.html")
 						span.light-font.right-translate Next Case
 						.arrow-wrapper.right-translate
 							.rectangle-arrow
 							+icon-arrow
-				p.copyright © Copyright 2019
 	a.navigation-btn.btn-pages(href="workbranding.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
