--- a/dev/assets/project-manage-puma.pug
+++ b/dev/assets/project-manage-puma.pug
@@ -45,7 +45,7 @@ block content
 					span Play
 			//- footer
 			section.footer-project
-				.snj-col-md-1.offset-md-2.arrow-container
+				.snj-col-md-1.offset-md-2.arrow-container.container-prev
 					a.more-cases.prev-case(href="project-social-power.html")
 						span.light-font.left-translate Previous Case
 						.arrow-wrapper.left-translate
@@ -56,13 +56,13 @@ block content
 					h3 Cartel Coffee
 					h4 Content Creation & Management
 					a(href="project-manage-coffee.html") See case
-				.snj-col-md-1.offset-md-1.arrow-container
+					p.copyright © Copyright 2019
+				.snj-col-md-1.offset-md-1.arrow-container.container-next
 					a.more-cases.next-case(href="project-manage-coffee.html")
 						span.light-font.right-translate Next Case
 						.arrow-wrapper.right-translate
 							.rectangle-arrow
 							+icon-arrow
-				p.copyright © Copyright 2019
 	a.navigation-btn.btn-pages(href="workmanagement.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
