--- a/dev/scss/views/_project-page.scss
+++ b/dev/scss/views/_project-page.scss
@@ -411,15 +411,15 @@ section.footer-project{
 		padding-top: getvw(220vw);
 		padding-bottom: getvw(39vw);
 	}
-	&:after{
-		content: "";
-		position: absolute;
-		background-color: red;
-		left: 0;
-		width: 100%;
-		height: 20px;
-		top: 0;
-	}
+	// &:after{
+	// 	content: "";
+	// 	position: absolute;
+	// 	background-color: red;
+	// 	left: 0;
+	// 	width: 100%;
+	// 	height: 20px;
+	// 	top: 0;
+	// }
 	.description{	
 		h3{
 			font-family: 'Nocturne Serif ExtraBold';
