Message UI: bug desapareciendo labels arreglado. Cambio de color al hover en la flecha agregado.

--- a/dev/assets/_modules/inputs-form.pug
+++ b/dev/assets/_modules/inputs-form.pug
@@ -1,15 +1,15 @@
 form#inputs-container
 	//- inputs text
 	.input-wrapper
-		input(type="text" name="name" id="Your Name" required)
+		input.jb-formfield(type="text" name="name" id="name" required)
 		label.placeholder.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="3" data-cascade-delay="2" for="name") Your name
 		span.bar.jb-cascade(data-cascade="line-full" data-cascade-delay-mobile="1" data-cascade-delay="1")
 	.input-wrapper
-		input(type="email" name="email" id="email" required)
+		input.jb-formfield(type="email" name="email" id="email" required)
 		label.placeholder.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="3" data-cascade-delay="2" for="email") Your mail
 		span.bar.jb-cascade(data-cascade="line-full" data-cascade-delay-mobile="2" data-cascade-delay="2")
 	.input-wrapper
-		textarea.sn-formfield(name="textarea",minlength="50", id="textarea", required)
+		textarea.jb-formfield.sn-formfield(name="textarea",minlength="50", id="textarea", required)
 		label.placeholder.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="3" data-cascade-delay="2" for="textarea") Tell us about your project
 		span.bar.jb-cascade(data-cascade="line-full" data-cascade-delay-mobile="3" data-cascade-delay="3")
 	//- check box
