Projects UI: Slider infinito listo y responsivo. Primeras imagenes agregadas.

--- a/dev/assets/_modules/slider.pug
+++ b/dev/assets/_modules/slider.pug
@@ -5,11 +5,13 @@ section#home-hero-slider-not-mobile.hero-slider-wrapper.not-mobile-hero-slider-w
 		#sliding-wrapper-not-mobile.sliding-wrapper.smooth-sliding
 			//- <!-- slide container elemento -->
 			.slide-container.slide-0
-				img(src="../img/project-img-4.jpg", alt="")
+				img(src="../img/projects/af_ecommerce/af_00.jpg", alt="")
 			.slide-container.slide-1
-				img(src="../img/project-img-4.jpg", alt="")
+				img(src="../img/projects/af_ecommerce/af_01.jpg", alt="")
 			.slide-container.slide-2
-				img(src="../img/project-img-4.jpg", alt="")
+				img(src="../img/projects/af_ecommerce/af_02.jpg", alt="")
+			.slide-container.slide-3
+				img(src="../img/projects/af_ecommerce/af_03.jpg", alt="")
 
 	button.slide-controller.controller-prev.to-slide(data-slide="prev")
 		span.up-translate Prev
