--- a/dev/scss/views/_message.scss
+++ b/dev/scss/views/_message.scss
@@ -175,6 +175,7 @@
 			//-active state
 			input:focus ~ label.placeholder,
 			input:valid ~ label.placeholder,
+			input.filled ~ label.placeholder,
 			textarea:focus ~ label.placeholder,
 			textarea.filled ~ label.placeholder{
 				opacity: 0;
