arreglos de estilos message

--- a/dev/assets/message.pug
+++ b/dev/assets/message.pug
@@ -2,7 +2,7 @@ extends _templates/layout.pug
 block preloader
 	//- .preloader.color-3
 block content
-	.message-section.snj-container-fluid.flex-column
+	.message-section.snj-container-fluid
 		.row
 			.center-wrapper.snj-col-9.offset-1.snj-col-md-6.offset-md-2
 				
