--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -33,7 +33,7 @@ html(class='no-js')
 		include ../_modules/arrow-right.pug
 		include ../_modules/project-box-mixin.pug
 
-		//- include ../_modules/grid-lines.pug
+		include ../_modules/grid-lines.pug
 		//- include ../_modules/grid-lines-full.pug
 
 		//- include ../_modules/intro.pug
@@ -48,7 +48,7 @@ html(class='no-js')
 			//- img(src="img/testing/about_desk.jpg", alt="")
 			//- img(src="img/testing/thanks_desk.jpg", alt="")
 			//- img(src="img/testing/contact_desk.jpg", alt="")
-			//- img(src="img/testing/message_desk.jpg", alt="")
+			img(src="img/testing/message_desk.jpg", alt="")
 
 			
 			//- mobile
@@ -59,7 +59,7 @@ html(class='no-js')
 			//- img(src="img/testing/about_mob.jpg", alt="")
 			//- img(src="img/testing/thanks_mob.jpg", alt="")
 			//- img(src="img/testing/contact_mob.jpg", alt="")
-			//- img(src="img/testing/message_mob.jpg", alt="")		
+			//- img(src="img/testing/message_mob.jpg", alt="")
 			//- img(src="img/testing/menu_mob.jpg", alt="")
 		//- content
 		#main-wrapper
