--- a/dev/scss/views/_message.scss
+++ b/dev/scss/views/_message.scss
@@ -2,30 +2,40 @@
 	height: 100%;
 	background-color: $light-orange;
 	color:$dark-brown;
+	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	.center-wrapper{
 		margin-top: -6px;
-		@media(min-width: 768px){
-			margin-top: 45px;
+	}
+	@media(min-width: 768px){
+		display: block;
+		.center-wrapper{
+			// margin-top: 30px;
+			padding-top: 265px;
 		}
-		@media(min-width: 1282px){
-			margin-top: getvw(46vw);
+	}
+	@media(min-width: 1282px){
+		.center-wrapper{
+			// margin-top: getvw(30vw);
+			padding-top: getvw(265vw);
 		}
 	}
 	.subtitle-block{
 		position: relative;
-		left: -1px;
 		width: 100%;
-		height: 14px;
-		margin-bottom: 24px;
+		height: 18px;
+		line-height: 22px;
+		margin-bottom: 20px;
 		font-weight: 100;
-		line-height: 16px;
 		letter-spacing: 0.02em;
-
+		@media(min-width: 768px){
+			margin-bottom: 24px;
+		}
 		@media(min-width: 1282px){
-			margin-bottom: getvw(25vw);
-			line-height: getvw(16vw);
-			height: getvw(14vw);
+			height: getvw(18vw);
+			line-height: getvw(22vw);
+			margin-bottom: getvw(24vw);
 		}
 	}
 }
@@ -60,14 +70,9 @@
 		}
 		.input-wrapper{
 			width: 100%;
-			// height: 33px;
 			flex-shrink: 0;
-			// margin-bottom: 2px;
 			display: block;
 			position: relative;
-			// @media(min-width: 768px){
-			// 	height: 52px;
-			// }
 			@media(min-width: 1282px){
 				margin-bottom: getvw(2vw);
 			}
@@ -105,7 +110,7 @@
 				&.placeholder{
 					// pointer-events: none;
 					position: absolute;
-					left: 0px;
+					left: 0;
 					top: 23.5%;
 					// top: 50%;
 					// transform: translateY(-50%);
@@ -129,7 +134,6 @@
 
 				&.policy{
 					font-size: 10px;
-					
 					@media(min-width: 768px){
 						font-size: 12px;
 					}
@@ -139,26 +143,31 @@
 				}
 			}
 			textarea{
+				padding: 8px 0 10px;
 				resize: none;
 				@include transitions-ease(.4s);
 				&:focus{
 					height: 96px;
 				}
 				@media(min-width: 768px){
-					padding-top: 16px;
+					padding-top: 19px;
 					&:focus{
 						height: 156px;
 					}
 				}
 				@media(min-width: 1282px){
-					padding-top: getvw(16vw);
+					padding: getvw(19vw) 0 getvw(10vw);
+					// padding-top: getvw(16vw);
 					&:focus{
 						height: getvw(156vw);
 					}
 				}
 			}
 			textarea ~ label.placeholder{
-				top: 32%;
+				// top: 24%;
+				@media(min-width: 768px){
+					top: 34%;
+				}
 			}
 
 			textarea:focus ~ label.placeholder{
@@ -214,10 +223,10 @@
 	justify-content: center;
 	height: auto;
 	@media(min-width: 768px){
-		padding: 16px 0 19px;
+		padding: 20px 0;
 	}
 	@media(min-width: 1282px){
-		padding: getvw(19vw) 0;
+		padding: getvw(20vw) 0;
 	}
 	label{
 		position: relative;
@@ -265,14 +274,14 @@
 	}
 }
 .message-section .arrow-container{
-	// width: 100%;
-	margin-top: 2px;
-	left: 11.11%;
+	width: auto;
+	margin-top: 4px;
+	padding-left: 11.11%;
 	position: relative;
 	display: inline-flex;
 	@include transitions-ease(.4s)
 	.arrow-right{
-		// margin-left: -20px;
+		margin-left: -20px;
 		pointer-events: none;
 		span{
 			color: $black;
@@ -310,10 +319,10 @@
 		}
 	}
 	@media(min-width: 768px){	
-		margin-top: 12px;
-		left: 33.33%;
+		margin-top: 16px;
+		// left: 33.33%;
+		padding-left: 33.8333%;
 		.arrow-right{
-			margin-left: -15px;
 			span{
 				font-size: 22px;
 				line-height: 20px;
@@ -323,9 +332,9 @@
 		}	
 	}
 	@media(min-width: 1282px){
-		margin-top: getvw(12vw);
+		margin-top: getvw(16vw);
 		.arrow-right{
-			margin-left: getvw(-15vw);
+			margin-left: getvw(-20vw);
 			span{
 				line-height: getvw(22vw);
 				height: getvw(20vw);
