--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -48,7 +48,7 @@ html(class='no-js')
 			//- img(src="img/testing/about_desk.jpg", alt="")
 			//- img(src="img/testing/thanks_desk.jpg", alt="")
 			//- img(src="img/testing/contact_desk.jpg", alt="")
-			img(src="img/testing/message_desk.jpg", alt="")
+			//- img(src="img/testing/message_desk.jpg", alt="")
 
 			
 			//- mobile
