--- a/dev/scss/views/_ourwork-sections.scss
+++ b/dev/scss/views/_ourwork-sections.scss
@@ -92,7 +92,7 @@
 			@media(min-width: 1282px){
 				height: getvw(70vw);
 				h2{
-					font-family: getvw(12vw);
+					font-size: getvw(12vw);
 				}
 			}
 		}
