--- a/dev/assets/_modules/header-nav.pug
+++ b/dev/assets/_modules/header-nav.pug
@@ -1,5 +1,5 @@
 header#header-nav.snj-container-fluid
-	.header-wrapper
+	.header-wrapper.snj-col-12
 		a.logo-wrapper.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1" href="index.html")
 			+logo-jb
 		include ../_modules/side-nav.pug
